Revert "Stac-13817: upgrade docker agent (#355)"
This reverts commit c7209a03d5b19c304c89a4498cbc84b0c2fc5fe0.

--- a/Dockerfiles/agent/Dockerfile
+++ b/Dockerfiles/agent/Dockerfile
@@ -2,7 +2,7 @@
 # Preparation stage: extract and cleanup #
 ##########################################
 
-FROM ubuntu:20.04 as extract
+FROM debian:buster-slim as extract
 ARG WITH_JMX
 COPY stackstate-agent*_amd64.deb /
 WORKDIR /output
@@ -47,7 +47,7 @@ COPY stackstate*.yaml etc/stackstate-agent/
 # Actual docker image construction #
 ####################################
 
-FROM ubuntu:20.04
+FROM debian:buster-slim
 LABEL maintainer "StackState <info@stackstate.com>"
 ARG WITH_JMX
 ENV DOCKER_STS_AGENT=true \
