--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -1,4 +1,11 @@
 ---
+- name: Create
+  hosts: localhost
+  connection: local
+  gather_facts: true
+  tasks:
+    - include_tasks: ../common/prepare/restore-molecule-cache.yml
+
 - name: Prepare Trace Java
   hosts: trace-java-demo
   gather_facts: true
