Remove .cache from the dest atifact directory

--- a/test/molecule-role/molecule/common/prepare/restore-molecule-cache.yml
+++ b/test/molecule-role/molecule/common/prepare/restore-molecule-cache.yml
@@ -2,4 +2,4 @@
 - name: Copy Molecule Cache Files
   copy:
     src: "{{ci_project_dir}}/.cache"
-    dest: "/root/.cache/molecule"
+    dest: "/root/"
