--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -22,6 +22,11 @@
           'instance_ids': "{{ stuff.instance_ids }}", }
       register: "instance_config_dict"
 
+    - name: Convert instance config dict to a list
+      set_fact:
+        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
+      when: server.changed | bool
+
 - name: Prepare Trace Java
   hosts: trace-java-demo
   gather_facts: true
