--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -39,6 +39,11 @@
           "tag:usage": "molecule-build"
       register: ec2_instances
 
+    - name: Content of ec2_instances
+      debug:
+        var: ec2_instances
+      when: ec2_instances is defined
+
     - name: Populate instance config dict
       set_fact:
         instance_conf_dict: {
@@ -51,17 +56,18 @@
           'instance_ids': "{{ item.instance_ids }}", }
       with_items: "{{ ec2_instances.instances }}"
       register: "instance_config_dict"
+      when: ec2_instances is defined
 
     - name: Convert instance config dict to a list
       set_fact:
         instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
-      when: server.changed | bool
+      when: instance_config_dict is defined
 
     - name: Dump instance config
       copy:
         content: "{{ instance_conf | to_json | from_json | molecule_to_yaml | molecule_header }}"
         dest: "{{ molecule_instance_config }}"
-      when: server.changed | bool
+      when: instance_config_dict is defined
 
 - name: Prepare Trace Java
   hosts: trace-java-demo
