--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -50,10 +50,10 @@
           'instance': "{{ item.tags.instance }}",
           'address': "{{ item.public_ip_address }}",
           'private_address': "{{ item.private_ip_address }}",
-          'user': "{{ item.item.item.ssh_user }}",
-          'port': "{{ ssh_port }}",
+          'user': "ubuntu",
+          'port': "22",
           'identity_file': "{{ keypair_path }}",
-          'instance_ids': "{{ item.instance_ids }}", }
+          'instance_ids': [ "{{ item.instance_id }}" ], }
       with_items: "{{ ec2_instances.instances }}"
       register: "instance_config_dict"
       when: ec2_instances is defined
