--- a/test/molecule-role/molecule/common/create/wait-for-ssh.yml
+++ b/test/molecule-role/molecule/common/create/wait-for-ssh.yml
@@ -1,9 +1,10 @@
 ---
 - name: Wait for SSH
   wait_for:
-    port: "{{ ssh_port }}"
+    port: "22"
     host: "{{ item.address }}"
     search_regex: SSH
     delay: 10
     timeout: 320
   with_items: "{{ lookup('file', molecule_instance_config) | molecule_from_yaml }}"
+# {{ ssh_port }}
