--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -26,8 +26,10 @@
 - name: Create
   hosts: localhost
   connection: local
-  gather_facts: false
+  gather_facts: true
   tasks:
+    - include_tasks: ../common/prepare/restore-molecule-cache.yml
+
     - name: "Gather existing EC2 instances for the branch '{{ agent_current_branch }}'"
       ec2_instance_info:
         filters:
@@ -58,6 +60,11 @@
       register: "instance_config_dict"
       when: ec2_instances is defined
 
+    - name: Content of instance_config_dict
+      debug:
+        var: instance_config_dict
+      when: instance_config_dict is defined
+
     - name: Convert instance config dict to a list
       set_fact:
         instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
@@ -68,6 +75,8 @@
         content: "{{ instance_conf | to_json | from_json | molecule_to_yaml | molecule_header }}"
         dest: "{{ molecule_instance_config }}"
       when: instance_config_dict is defined
+
+    - include_tasks: ../common/create/wait-for-ssh.yml
 
 - name: Prepare Trace Java
   hosts: trace-java-demo
