Add env variable for job id Add job id to tags for ec2 Cleanup keypair file Remove structure create and log inv Cleanup run create Cleanup run prepare Cleanup setup prepare Remove wait time Add back dynamic ssh port to yml file

--- a/test/molecule-role/molecule/common/create/create-molecule-instances.yml
+++ b/test/molecule-role/molecule/common/create/create-molecule-instances.yml
@@ -14,6 +14,7 @@
       agent_current_branch: "{{ agent_current_branch }}"
       molecule_scenario_name: "{{ molecule_scenario_name }}"
       ci_sts_major_python_version: "{{ ci_sts_major_python_version }}"
+      ci_job_id: "{{ ci_job_id }}"
       usage: "molecule-build"
       dev: "{{ dev_mode }}"
       molecule: yes
