--- a/test/molecule-role/molecule/common/create/persist-molecule-cache.yml
+++ b/test/molecule-role/molecule/common/create/persist-molecule-cache.yml
@@ -1,5 +1,5 @@
 ---
-- name: Copy Molecule Cache Files
+- name: Persist Molecule Cache Files
   copy:
     src: "/root/.cache/molecule"
     dest: "{{ci_project_dir}}/.cache"
