Persist task extension fix

--- a/test/molecule-role/molecule/compose/playbook.setup.create.yml
+++ b/test/molecule-role/molecule/compose/playbook.setup.create.yml
@@ -31,4 +31,4 @@
     - include_tasks: ../common/create/create-molecule-instances.yml
     - include_tasks: ../common/create/wait-for-instance-creation-to-complete.yml
     - include_tasks: ../common/create/wait-for-ssh.yml
-    - include_tasks: ../common/create/persist-molecule-cache
+    - include_tasks: ../common/create/persist-molecule-cache.yml
