--- a/test/molecule-role/molecule/compose/playbook.setup.create.yml
+++ b/test/molecule-role/molecule/compose/playbook.setup.create.yml
@@ -32,3 +32,4 @@
     - include_tasks: ../common/create/wait-for-instance-creation-to-complete.yml
     - include_tasks: ../common/create/wait-for-ssh.yml
     - include_tasks: ../common/create/persist-molecule-cache.yml
+    - include_tasks: ../common/create/encrypt-ssh-key.yml
