--- a/test/molecule-role/molecule/compose/provisioner.run.yml
+++ b/test/molecule-role/molecule/compose/provisioner.run.yml
@@ -2,7 +2,7 @@
 provisioner:
   name: ansible
   options:
-    'vault-id': "${MOLECULE_SCENARIO_NAME}@${CI_PROJECT_DIR}${DEV_PATH}/test/molecule-role/molecule/vault-password.py"
+    'vault-id': "${MOLECULE_SCENARIO_NAME}@${CI_PROJECT_DIR}/test/molecule-role/molecule/vault-password.py" "${CI_PROJECT_DIR}/.cache/molecule/molecule-role/${MOLECULE_SCENARIO_NAME}/ssh_key"
   playbooks:
     create: playbook.run.create.yml
     prepare: playbook.run.prepare.yml
