--- a/test/molecule-role/molecule/compose/playbook.run.prepare.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.prepare.yml
@@ -7,3 +7,10 @@
     - include_tasks: ../common/prepare/run-docker-compose.yml
     - include_tasks: ../common/prepare/wait-for-receiver.yml
     - include_tasks: ../common/prepare/wait-for-agent.yml
+
+- name: Encryption
+  hosts: localhost
+  connection: local
+  gather_facts: true
+  tasks:
+    - include_tasks: ../common/create/encrypt-ssh-key.yml
