--- a/test/molecule-role/molecule/vms/group_vars/all.yml
+++ b/test/molecule-role/molecule/vms/group_vars/all.yml
@@ -16,7 +16,7 @@ quay_user: "{{ lookup('env', 'quay_user') or QUAY_USER }}"
 
 stackstate_branch: "{{ lookup('env', 'STACKSTATE_BRANCH') or STACKSTATE_BRANCH }}"
 
-ci_job_id: "{{ lookup('env', 'CI_JOB_ID') or lookup('env', 'USER') }}"
+ci_pipeline_id: "{{ lookup('env', 'CI_PIPELINE_ID') or lookup('env', 'USER') }}"
 ci_project_dir: "{{ lookup('env', 'CI_PROJECT_DIR') }}"
 ci_job_token: "{{ lookup('env', 'CI_JOB_TOKEN') }}"
 ci_sts_major_python_version: "{{ lookup('env', 'STS_VER') }}.{{ lookup('env', 'MAJOR_VERSION') }}.{{ lookup('env', 'PYTHON_RUNTIMES') }}"
