Get SSH user and Port without hard coding

--- a/test/molecule-role/molecule/common/create/create-molecule-instances-sda-volume.yml
+++ b/test/molecule-role/molecule/common/create/create-molecule-instances-sda-volume.yml
@@ -16,6 +16,7 @@
     tags:
       Name: "{{ item.name }}"
       instance: "{{ item.name }}"
+      user: "{{ item.ssh_user }}"
       molecule_run_id: "{{ molecule_run_id }}"
       agent_current_branch: "{{ agent_current_branch }}"
       molecule_scenario_name: "{{ molecule_scenario_name }}"
