--- a/test/molecule-role/molecule/common/prepare/populate-instance-config.yml
+++ b/test/molecule-role/molecule/common/prepare/populate-instance-config.yml
@@ -3,12 +3,15 @@
   ec2_instance_info:
     filters:
       instance-state-name: [ "running" ]
-      "tag:ci_pipeline_id": "{{ ci_pipeline_id }}"
-      "tag:ci_sts_major_python_version": "{{ ci_sts_major_python_version }}"
+      "tag:instance": "{{ item.name }}"
       "tag:agent_current_branch": "{{ agent_current_branch }}"
       "tag:molecule_scenario_name": "{{ molecule_scenario_name }}"
-      "tag:dev": "{{ dev_mode }}"
+      "tag:ci_sts_major_python_version": "{{ ci_sts_major_python_version }}"
+      "tag:ci_pipeline_id": "{{ ci_pipeline_id }}"
       "tag:usage": "molecule-build"
+      "tag:dev": "{{ dev_mode }}"
+      "tag:molecule": "yes"
+  with_items: "{{ molecule_yml.platforms }}"
   register: ec2_instances
 
 - name: Content of ec2_instances
@@ -27,8 +30,8 @@
       'instance': "{{ item.tags.instance }}",
       'address': "{{ item.public_ip_address }}",
       'private_address': "{{ item.private_ip_address }}",
-      'user': "ubuntu",
-      'port': "22",
+      'user': "{{ item.tags.user }}",
+      'port': "{{ ssh_port }}",
       'identity_file': "{{ keypair_path }}",
       'instance_ids': [ "{{ item.instance_id }}" ], }
   with_items: "{{ ec2_instances.instances }}"
