--- a/test/molecule-role/molecule/common/destroy/destroy-molecule-instances.yml
+++ b/test/molecule-role/molecule/common/destroy/destroy-molecule-instances.yml
@@ -13,6 +13,7 @@
       "tag:molecule_scenario_name": "{{ molecule_scenario_name }}"
       "tag:dev": "{{ dev_mode }}"
       "tag:usage": "molecule-build"
+      "tag:molecule": "yes"
   register: branch_instances
 
 - name: Instances found
