--- a/test/molecule-role/molecule/kubernetes/group_vars/all.yml
+++ b/test/molecule-role/molecule/kubernetes/group_vars/all.yml
@@ -2,7 +2,7 @@
 molecule_scenario_name: "{{ lookup('env', 'MOLECULE_SCENARIO_NAME') }}"
 molecule_ephemeral_directory: "{{ lookup('env', 'MOLECULE_EPHEMERAL_DIRECTORY') }}"
 
-ci_pipeline_id: "{{ lookup('env', 'CI_PIPELINE_ID') or lookup('env', 'USER') }}"
+ci_commit_sha: "{{ lookup('env', 'CI_COMMIT_SHA') or lookup('env', 'USER') }}"
 ci_project_dir: "{{ lookup('env', 'CI_PROJECT_DIR') }}"
 ci_job_token: "{{ lookup('env', 'CI_JOB_TOKEN') }}"
 ci_sts_major_python_version: "{{ lookup('env', 'STS_VER') }}.{{ lookup('env', 'MAJOR_VERSION') }}.{{ lookup('env', 'PYTHON_RUNTIMES') }}"
