--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -679,7 +679,7 @@ pre_release_cluster_agent_image:
 # Primary test steps for all the molecule builds
 .molecule_test_artifacts: &molecule_test_artifacts
   <<: *molecule_artifacts
-  stage: prepare_temp
+  stage: acceptance
   script:
     - cd $CI_PROJECT_DIR/test
     - ./molecule3.sh --base-config ./molecule/$MOLECULE_SCENARIO/provisioner.run.yml create --scenario-name $MOLECULE_SCENARIO
@@ -729,7 +729,7 @@ molecule_compose_test:
   dependencies:
     - molecule_compose_create
   needs:
-    # - pre_release_main_agent_image
+    - pre_release_main_agent_image
     - molecule_compose_create
 
 molecule_compose_failure_cleanup:
